[tool.poetry]
name = "boltzmann"
version = "0.1"
description = ""
authors = ["David Bucher <d.bucher97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<1.24"
matplotlib = "^3.7.1"
jax = {extras = ["cpu"], version = "^0.4.7"}
qiskit = "^0.42.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
